--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ body {
 @media screen and (min-width:768px) {
     .booklist{
         grid-template-columns: repeat(3, 1fr);
+        /* align-items: start; */
     }
 }
 
@@ -39,3 +40,7 @@ body {
 .book h2 {
     margin-top: 1rem;
 }
+
+/* .book p{
+    margin: 1rem 0 0.5rem;
+} */
